--- a/bansky/fansite_multi/fansite3.css
+++ b/bansky/fansite_multi/fansite3.css
@@ -251,13 +251,13 @@ nav{
     justify-content: flex-end;
     align-items: center;
     height: 35px;
-    font-size: x-large;
+    font-size: large;
 }
 nav ul{
     display: flex;
     list-style-type: none;
     padding-bottom: 0;
-    margin-right: 20px;
+    margin-right: 50px;
 }
 
 nav ul li{
