--- a/css/elonmsukfanpage.css
+++ b/css/elonmsukfanpage.css
@@ -49,7 +49,7 @@ header a:hover{
 }
 /* Accueil */
 .fd_ec_acc {
-    background-image: url(image/pixelcut-export.png);
+    background-image: url(../images/fansite2/pixelcut-export.png);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -66,7 +66,7 @@ header a:hover{
 }
 /* Biographie */
 .fd_ec_bio {
-    background-image: url(image/profilelon.jpeg);
+    background-image: url(../images/fansite2/profilelon.jpeg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -119,7 +119,7 @@ header a:hover{
 
 /* Réalisation */
 .realisation {
-    background-image: url(image/falcon-9-spacex.jpg);
+    background-image: url(../images/fansite2/falcon-9-spacex.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -132,6 +132,7 @@ header a:hover{
 
 .realisation p {
     color: white;
+    text-shadow: #1e1c20 2px 2px 1px;
     margin: 5%;
 }
 
@@ -143,8 +144,13 @@ header a:hover{
 
 /* Actualité */
 .cadrevideo {
-    margin: 10px;
-    align-items: space-between;
+    margin: 20px 10%;
+    display:flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    iframe{
+        margin:10px;
+    }
 }
 
 /* Footer */
@@ -193,4 +199,35 @@ footer img {
     justify-content: center;
     align-items: center;
     margin-top: 5px;  /* Espacement entre la liste et le logo */
+}
+
+@media screen and (max-width:720px) {
+    .menu li{
+        margin:1%;
+    }
+    .boutonheader{
+        padding:5%;
+    }
+    .fd_ec_bio{
+        background-size: cover;
+        background-position: right;
+        height:60vh;
+    }
+    .cadrescroll {
+        width: 80%;
+        margin:10%;
+        .texte{
+            margin-top:20%;
+        }
+    }
+    .alignerpancarte2{
+        flex-direction: column;
+        align-items: center;
+    }
+    .pancarte {
+        width: calc(80% - 40px);
+    }
+    .realisation{
+        height: 70vh;
+    }
 }
