--- a/css/contact_style.css
+++ b/css/contact_style.css
@@ -1,4 +1,12 @@
 
+body{
+    font-family:'Calibri','Montserrat', sans-serif;
+}
+
+h1{
+    color: white;
+}
+
 h2,h1{
     text-align: center;
 }
@@ -38,6 +46,68 @@ button{
 }
 
 footer, header{
-    background-color: bisque;
+    background-color: rgb(21, 24, 90);
     height: 80px;
+}
+
+footer{
+    margin-top: 10px;
+
+}
+
+a{
+    color:white;
+    font-size: large;
+}
+
+.footer_style{
+    display: flex;
+    justify-content: flex-end;
+}
+
+@media (max-width: 900px) {
+    body {
+        font-size: medium; 
+        padding: 10px; 
+    }
+
+    h1, h2 {
+        font-size: medium; 
+    }
+
+    .part_1, .part_2 {
+        flex-direction: column; /
+        gap: 5px; 
+        align-items: center; 
+    }
+
+    #email {
+        width: 80%; 
+        max-width: 200px; 
+    }
+
+    .part_3 {
+        margin-top: 10px; 
+        gap: 10px; 
+    }
+
+    button {
+        width: 80%; 
+        max-width: 300px; 
+        height: 40px; 
+    }
+
+    footer, header {
+        height: 60px; 
+    }
+
+    .footer_style {
+        justify-content: center; 
+        flex-wrap: wrap; 
+        text-align: center; 
+    }
+
+    a {
+        font-size: medium; 
+    }
 }
